add new website from server na

--- a/xem-phim-bo/pham-nhan-tu-tien/index.html
+++ b/xem-phim-bo/pham-nhan-tu-tien/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             9
+             11
             </dd>
             <br/>
            </dl>
@@ -1582,28 +1582,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Brothers For Life (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             54 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1616,6 +1594,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hùng Long Phong Bá (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              54 lượt xem
@@ -1661,18 +1661,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bac-thay-xe-hoi-tu-dong-nat-den-giau-sang-phan-4" title="Bậc thầy xe hơi: Từ đồng nát đến giàu sang (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/tam-duc-hoa-thuong-va-xuan-me-luc" title="Tam  Đức hòa thượng và Xuân Mễ Lục">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-thay-xe-hoi-tu-dong-nat-den-giau-sang-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tam-duc-hoa-thuong-va-xuan-me-luc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bậc thầy xe hơi: Từ đồng nát đến giàu sang (Phần 4)
+             Tam  Đức hòa thượng và Xuân Mễ Lục
             </span>
             <span class="list-top-movie-item-en">
-             Car Masters: Rust to Riches (Season 4)
+             The Iron Fisted Monk
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1683,18 +1683,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lau-ngoai-lau" title="Lầu Ngoại Lâu">
+          <a class="list-top-movie-link" href="/phim-moi/thuoc-vai-ma-mi" title="Thước Vải Ma Mị">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lau-ngoai-lau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuoc-vai-ma-mi-42-tap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lầu Ngoại Lâu
+             Thước Vải Ma Mị
             </span>
             <span class="list-top-movie-item-en">
-             Building Beyond Building
+             Undying Secret
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1705,18 +1705,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/duong-ham-toi-ac" title="Đường Hầm Tội Ác">
+          <a class="list-top-movie-link" href="/phim-moi/john-tung-tim-cach-lien-lac-nguoi-ngoai-hanh-tinh" title="John từng tìm cách liên lạc người ngoài hành tinh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duong-ham-toi-ac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/john-tung-tim-cach-lien-lac-nguoi-ngoai-hanh-tinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đường Hầm Tội Ác
+             John từng tìm cách liên lạc người ngoài hành tinh
             </span>
             <span class="list-top-movie-item-en">
-             At the End of the Tunnel
+             John Was Trying to Contact Aliens
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1727,21 +1727,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ong-bak-the-thai-warrior" title="Ong-Bak: The Thai Warrior">
+          <a class="list-top-movie-link" href="/phim-moi/thu-tinh" title="Thú Tính">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-bak-the-thai-warrior-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-tinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ong-Bak: The Thai Warrior
+             Thú Tính
             </span>
             <span class="list-top-movie-item-en">
-             Ong-Bak: The Thai Warrior
+             Exploited
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1749,21 +1749,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoa-khe-ky" title="Hoa Khê Ký">
+          <a class="list-top-movie-link" href="/phim-moi/the-horror-of-dolores-roach" title="The Horror of Dolores Roach">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-khe-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-horror-of-dolores-roach-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hoa Khê Ký
+             The Horror of Dolores Roach
             </span>
             <span class="list-top-movie-item-en">
-             Love is an Accident
+             The Horror of Dolores Roach
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
