add new website from server na

--- a/xem-phim-bo/luu-thuy-dieu-dieu/index.html
+++ b/xem-phim-bo/luu-thuy-dieu-dieu/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             28
+             29
             </dd>
             <br/>
            </dl>
@@ -1551,7 +1551,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lust, Caution
             </span>
             <span class="list-top-movie-item-view">
-             65 lượt xem
+             67 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1573,9 +1573,31 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Dragon Hunting.Soul Suppressing Coffin
             </span>
             <span class="list-top-movie-item-view">
-             62 lượt xem
+             63 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
             </span>
            </div>
           </a>
@@ -1595,7 +1617,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             53 lượt xem
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1617,29 +1639,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             49 lượt xem
+             52 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1660,40 +1660,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sherlock-holmes" title="Sherlock Holmes">
+          <a class="list-top-movie-link" href="/phim-moi/meo-cuoi-ca" title="Mèo Cưỡi Cá">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sherlock-holmes-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/meo-cuoi-ca-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sherlock Holmes
+             Mèo Cưỡi Cá
             </span>
             <span class="list-top-movie-item-en">
-             Sherlock Holmes
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/terrace-house-tieu-bang-aloha-phan-1" title="Terrace House: Tiểu bang Aloha (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/terrace-house-tieu-bang-aloha-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Terrace House: Tiểu bang Aloha (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Terrace House: Aloha State (Season 1)
+             Perfect Mismatch
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1704,18 +1682,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lien-minh-cong-ly-tham-hoa-giua-hai-trai-dat" title="Liên Minh Công Lý: Thảm Họa Giữa Hai Trái Đất">
+          <a class="list-top-movie-link" href="/phim-moi/con-mua-thit-vien" title="Cơn Mưa Thịt Viên">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lien-minh-cong-ly-tham-hoa-giua-hai-trai-dat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-mua-thit-vien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Liên Minh Công Lý: Thảm Họa Giữa Hai Trái Đất
+             Cơn Mưa Thịt Viên
             </span>
             <span class="list-top-movie-item-en">
-             Justice League: Crisis on Two Earths
+             Cloudy with a Chance of Meatballs
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1726,18 +1704,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chico-bon-bon-chu-khi-va-that-lung-do-nghe-phan-3" title="Chico Bon Bon: Chú khỉ và thắt lưng đồ nghề (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-phieu-luu-cua-chiec-nhan" title="Cuộc Phiêu Lưu Của Chiếc Nhẫn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chico-bon-bon-chu-khi-va-that-lung-do-nghe-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-phieu-luu-cua-chiec-nhan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chico Bon Bon: Chú khỉ và thắt lưng đồ nghề (Phần 3)
+             Cuộc Phiêu Lưu Của Chiếc Nhẫn
             </span>
             <span class="list-top-movie-item-en">
-             Chico Bon Bon: Monkey with a Tool Belt (Season 3)
+             Adventure of the Ring
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1748,18 +1726,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dead-in-tombstone" title="Dead in Tombstone">
+          <a class="list-top-movie-link" href="/phim-moi/lo-mo-iii" title="Lò Mổ III">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dead-in-tombstone-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lo-mo-iii-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dead in Tombstone
+             Lò Mổ III
             </span>
             <span class="list-top-movie-item-en">
-             Dead in Tombstone
+             Hostel: Part III
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tsukiuta-the-animation" title="Tsukiuta. The Animation">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tsukiuta-the-animation-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tsukiuta. The Animation
+            </span>
+            <span class="list-top-movie-item-en">
+             Tsukiuta. The Animation
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
